[package]
name = "steam-market-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
colored = "2.0.0"
regex = "1.7.3"
reqwest = { version = "0.11.15"}
serde = { version = "1.0.158", features=["derive"] }
tokio = { version = "1.27.0" , features=["full"] }
toml = "0.7.3"

[lib]
name = "sm_api"
path = "src/sm_api.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"